--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -126,7 +126,7 @@ button {
 
   .sidebar {
     width: 500px;
-    padding: 16px 16px 24px;
+    padding: 16px;
     gap: 16px;
     border-radius: 32px;
   }
